k - fixed main header positioning and accessibility for menu button spacing

--- a/pub_html/css/main.css
+++ b/pub_html/css/main.css
@@ -82,7 +82,6 @@ header{
   top: 0;
   height: 2rem;
   z-index: 1;
-  /* overflow: hidden; */
 }
 
 .header-nav{
@@ -122,7 +121,6 @@ header{
       -o-transition: .5s ease-in;
       -ms-transition: .5s ease-in;
       transition: .5s ease-in;
-    /* transition:  */
 }
 
 .header-home-nav a:hover, .header-home-nav a:focus{
@@ -136,7 +134,7 @@ header{
   text-align: left;
   background-color: white;
   padding: 2rem;
-  z-index:1;
+  z-index: 0;
   -webkit-transition: .5s ease-in;
     -moz-transition: .5s ease-in;
     -o-transition: .5s ease-in;
@@ -169,24 +167,24 @@ header{
   border: none;
   background: transparent;
   position: absolute;
-  top: 55px;
+  top: 40px;
   right: 90px;
   text-align: left;
   z-index: 3;
-}
-
-.hamburger-btn:focus{
-  outline:none;
+  height: 40px;
+  width: 45px;
+  padding: none;
 }
 
 .hamburger-icon{
   background-color: rgba(255, 0, 0, 0.7);
   width: 30px;
-  height: 5px;
+  height: 4px;
   display: block;
   position: absolute;
+  margin: none;
   transition: all 0.3s;
-    margin-top: 10px;
+  pointer-events: none;
 }
 
 .hamburger-icon::before, .hamburger-icon::after{
@@ -194,7 +192,7 @@ header{
   content: '';
   background-color: rgba(255, 0, 0, 0.7);
   width: 40px;
-  height: 5px;
+  height: 4px;
 }
 
 .hamburger-icon::before{
@@ -205,7 +203,11 @@ header{
   top:10px;
 }
 
-.hamburger-icon:hover, .hamburger-icon:focus{
+.hamburger-btn:focus, .hamburger-btn:hover{
+    outline:none;
+}
+
+.hamburger-btn:hover .hamburger-icon, .hamburger-btn:focus .hamburger-icon{
   width: 40px;
   background-color: rgba(0, 0, 255, 0.7);
 }
@@ -420,17 +422,18 @@ footer{
   }
   .header-home-nav{
     left: 20px;
+    top: 30px;
   }
   .header-home-nav a{
     font-size: 1.1rem;
   }
   .hamburger-icon, .hamburger-icon::before, .hamburger-icon::after{
     width: 30px;
-    height: 3px;
+    height: 4px;
   }
   .hamburger-btn{
-    top: 40px;
-    right: 40px;
+    top: 15px;
+    right: 20px;
   }
   .hamburger-icon:hover, .hamburger-icon:focus{
     width: 25px;
