--- a/pub_html/styleguide/styleguide_css/styleguide_main.css
+++ b/pub_html/styleguide/styleguide_css/styleguide_main.css
@@ -3,7 +3,6 @@
 }
 
 .block{
-  margin: 0.5rem;
   flex-basis: auto;
 }
 
@@ -25,6 +24,7 @@ section{
 .element-block{
   width: 30rem;
   margin-bottom: 50px;
+  margin-right: 0.5rem;
 }
 
 .code-block{
@@ -49,65 +49,81 @@ section{
 
 /* header stuff */
 #header2{
-  position: relative;
+  /* position: relative; */
   width: 100%;
   z-index: 0;
 }
 .header-white-background{
   width: 100%;
-  z-index: 0;
+  z-index: 1;
 }
 
 .header-nav{
   position: relative;
-  z-index: 0;
 }
 
 #header-home-nav-2{
   position: absolute;
   top: 40px;
   left: 2rem;
-  z-index: 3;
-  z-index: 0;
-}
-
-#header-home-nav-2 a{
-  font-size: 1.5rem;
-  position: relative;
-  top: auto;
-  right:auto;
-  z-index: 0;
+  z-index: 2;
+  display: block;
 }
 
 #header-right-nav-2{
-  display: none;
-  z-index: 0;
+  opacity: 0;
 }
 
-#header-right-nav2 a{
+#header-right-nav-2 a{
   text-decoration: none;
   color: black;
   font-family: 'Nunito Sans', sans-serif;
   font-size: 1.2rem;
   font-weight: 300;
-    font-style: oblique;
-  display: block;
+  font-style: oblique;
   align-self: flex-end;
-  display: none;
 }
 
 .hamburger-btn2{
-  position: absolute;
   border: none;
   background: transparent;
-  top: 45px;
+  position: absolute;
+  top: 40px;
   right: 90px;
   text-align: left;
-  z-index: 0;
+  z-index: 3;
+  height: 40px;
+  width: 45px;
+  padding: none;
 }
 
-.hamburger-btn2:focus{
+.hamburger-btn2:focus, .hamburger-btn2:hover{
   outline:none;
+}
+
+.hamburger-btn2:hover .hamburger-icon, .hamburger-btn2:focus .hamburger-icon{
+  width: 40px;
+  background-color: rgba(0, 0, 255, 0.7);
+}
+
+.active{
+  top: 60px;
+  box-shadow: 0 5px 5px rgba(100, 100, 100, 0.3);
+  opacity: 100;
+}
+
+.hamburger-btn2.toggle .hamburger-icon{
+  background: transparent;
+}
+
+.hamburger-btn2.toggle .hamburger-icon:before{
+  top: 0;
+  transform: rotate(45deg);
+}
+
+.hamburger-btn2.toggle .hamburger-icon:after{
+  top: 0;
+  transform: rotate(-45deg);
 }
 
 /* colours */
